{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 885,
  "lineage": "82672678-349a-2712-d51f-1c4c230d12dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "production-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ee4e2261a4dc5c3",
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:instance/i-067eda530a8b8989b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fungry-production-private-instance-profile",
            "id": "i-067eda530a8b8989b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f17e66c6f2b728f",
            "private_dns": "ip-10-0-101-206.ap-northeast-1.compute.internal",
            "private_ip": "10.0.101.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:167907275771:key/6920be0b-7274-4f8c-8d1a-dd10f7e00ff3",
                "throughput": 125,
                "volume_id": "vol-0c8108dd147bd6edf",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c59ec40e2f1b715",
            "tags": {
              "Name": "fungry-production-production-1a"
            },
            "tags_all": {
              "Name": "fungry-production-production-1a"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "fungry-production-production-1a-volume"
            },
            "vpc_security_group_ids": [
              "sg-02125aa2881b7f764"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.private-instance-ssm",
            "aws_iam_role.private-instance-role",
            "aws_security_group.allow-app",
            "data.aws_iam_policy_document.assume-role",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "production-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ee4e2261a4dc5c3",
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:instance/i-0056458cd00f5c443",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "fungry-production-private-instance-profile",
            "id": "i-0056458cd00f5c443",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e7b06f30dc9efa0",
            "private_dns": "ip-10-0-102-172.ap-northeast-1.compute.internal",
            "private_ip": "10.0.102.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-1:167907275771:key/6920be0b-7274-4f8c-8d1a-dd10f7e00ff3",
                "throughput": 125,
                "volume_id": "vol-0d0c8cb4c67e0f5b7",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ce6f8929ab50225",
            "tags": {
              "Name": "fungry-production-production-1c"
            },
            "tags_all": {
              "Name": "fungry-production-production-1c"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "fungry-production-production-1c-volume"
            },
            "vpc_security_group_ids": [
              "sg-02125aa2881b7f764"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.private-instance-ssm",
            "aws_iam_role.private-instance-role",
            "aws_security_group.allow-app",
            "data.aws_iam_policy_document.assume-role",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:167907275771:loadbalancer/app/fungry-production-app-alb/802200dd6df0cdb8",
            "arn_suffix": "app/fungry-production-app-alb/802200dd6df0cdb8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "fungry-production-app-alb-85303681.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:167907275771:loadbalancer/app/fungry-production-app-alb/802200dd6df0cdb8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fungry-production-app-alb",
            "security_groups": [
              "sg-00b0d617dd782cd49",
              "sg-02125aa2881b7f764",
              "sg-0b6230d7090c0967d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-093a703a3e35a9b9a"
              },
              {
                "subnet_id": "subnet-0f3f45503eebd360f"
              }
            ],
            "subnets": [
              "subnet-093a703a3e35a9b9a",
              "subnet-0f3f45503eebd360f"
            ],
            "tags": {
              "Name": "fungry-production-app-alb",
              "env": "production"
            },
            "tags_all": {
              "Name": "fungry-production-app-alb",
              "env": "production"
            },
            "vpc_id": "vpc-01ffdd4a4b27702e4",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.allow-app",
            "aws_security_group.allow-http-from-internet",
            "aws_security_group.allow-https-from-internet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app-alb-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:167907275771:listener/app/fungry-production-app-alb/802200dd6df0cdb8/8af352af10315e16",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:167907275771:targetgroup/fungry-production-app-alb-tg/8c03744aa287e155",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:167907275771:listener/app/fungry-production-app-alb/802200dd6df0cdb8/8af352af10315e16",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:167907275771:loadbalancer/app/fungry-production-app-alb/802200dd6df0cdb8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-alb",
            "aws_lb_target_group.app-alb-targetgroup",
            "aws_security_group.allow-app",
            "aws_security_group.allow-http-from-internet",
            "aws_security_group.allow-https-from-internet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "app-alb-listener-https-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:167907275771:targetgroup/fungry-production-app-alb-tg/8c03744aa287e155",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:167907275771:listener-rule/app/fungry-production-app-alb/802200dd6df0cdb8/8af352af10315e16/910df496b97ef5a0",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "example.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:167907275771:listener-rule/app/fungry-production-app-alb/802200dd6df0cdb8/8af352af10315e16/910df496b97ef5a0",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:167907275771:listener/app/fungry-production-app-alb/802200dd6df0cdb8/8af352af10315e16",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-alb",
            "aws_lb_listener.app-alb-listener-http",
            "aws_lb_target_group.app-alb-targetgroup",
            "aws_security_group.allow-app",
            "aws_security_group.allow-http-from-internet",
            "aws_security_group.allow-https-from-internet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-alb-targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:167907275771:targetgroup/fungry-production-app-alb-tg/8c03744aa287e155",
            "arn_suffix": "targetgroup/fungry-production-app-alb-tg/8c03744aa287e155",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:167907275771:targetgroup/fungry-production-app-alb-tg/8c03744aa287e155",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "fungry-production-app-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "fungry-production-app-alb-tg",
              "env": "production"
            },
            "tags_all": {
              "Name": "fungry-production-app-alb-tg",
              "env": "production"
            },
            "target_type": "ip",
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:security-group/sg-07b48dcbc76ef7dcc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b48dcbc76ef7dcc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "fungry-production-allow-icmp",
            "name_prefix": "",
            "owner_id": "167907275771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fungry-production-allow-icmp"
            },
            "tags_all": {
              "Name": "fungry-production-allow-icmp"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:security-group/sg-02125aa2881b7f764",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02125aa2881b7f764",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "fungry-production-allow-app",
            "name_prefix": "",
            "owner_id": "167907275771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fungry-production-allow-app"
            },
            "tags_all": {
              "Name": "fungry-production-allow-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-http-from-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:security-group/sg-0b6230d7090c0967d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6230d7090c0967d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fungry-production-allow-http-from-internet",
            "name_prefix": "",
            "owner_id": "167907275771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fungry-production-allow-http-from-internet"
            },
            "tags_all": {
              "Name": "fungry-production-allow-http-from-internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-https-from-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:security-group/sg-00b0d617dd782cd49",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b0d617dd782cd49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "fungry-production-allow-https-from-internet",
            "name_prefix": "",
            "owner_id": "167907275771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fungry-production-allow-https-from-internet"
            },
            "tags_all": {
              "Name": "fungry-production-allow-https-from-internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0464005c1b1411f03",
            "domain": "vpc",
            "id": "eipalloc-0464005c1b1411f03",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-52-199-114-129.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.199.114.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fungry-production-vpc-ap-northeast-1a",
              "env": "production"
            },
            "tags_all": {
              "Name": "fungry-production-vpc-ap-northeast-1a",
              "env": "production"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:internet-gateway/igw-0a2bd7cdc5df30764",
            "id": "igw-0a2bd7cdc5df30764",
            "owner_id": "167907275771",
            "tags": {
              "Name": "fungry-production-vpc",
              "env": "production"
            },
            "tags_all": {
              "Name": "fungry-production-vpc",
              "env": "production"
            },
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0464005c1b1411f03",
            "connectivity_type": "public",
            "id": "nat-004572e3643d600d6",
            "network_interface_id": "eni-0ccdf3126466bf417",
            "private_ip": "10.0.1.144",
            "public_ip": "52.199.114.129",
            "subnet_id": "subnet-0f3f45503eebd360f",
            "tags": {
              "Name": "fungry-production-vpc-ap-northeast-1a",
              "env": "production"
            },
            "tags_all": {
              "Name": "fungry-production-vpc-ap-northeast-1a",
              "env": "production"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-041226318be046d381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-004572e3643d600d6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-041226318be046d38",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a2bd7cdc5df30764",
            "id": "r-rtb-0140ecce0f9c2c2aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0140ecce0f9c2c2aa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:route-table/rtb-041226318be046d38",
            "id": "rtb-041226318be046d38",
            "owner_id": "167907275771",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fungry-production-vpc-private",
              "env": "production"
            },
            "tags_all": {
              "Name": "fungry-production-vpc-private",
              "env": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:route-table/rtb-0140ecce0f9c2c2aa",
            "id": "rtb-0140ecce0f9c2c2aa",
            "owner_id": "167907275771",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fungry-production-vpc-public",
              "env": "production"
            },
            "tags_all": {
              "Name": "fungry-production-vpc-public",
              "env": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097cf8405d802cb71",
            "route_table_id": "rtb-041226318be046d38",
            "subnet_id": "subnet-01c59ec40e2f1b715"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09425c1b30aef9839",
            "route_table_id": "rtb-041226318be046d38",
            "subnet_id": "subnet-02ce6f8929ab50225"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026d8f9ba6ddaa2b9",
            "route_table_id": "rtb-0140ecce0f9c2c2aa",
            "subnet_id": "subnet-0f3f45503eebd360f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7989538db8e42a9",
            "route_table_id": "rtb-0140ecce0f9c2c2aa",
            "subnet_id": "subnet-093a703a3e35a9b9a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:subnet/subnet-01c59ec40e2f1b715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c59ec40e2f1b715",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "167907275771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fungry-production-vpc-private-ap-northeast-1a",
              "env": "production"
            },
            "tags_all": {
              "Name": "fungry-production-vpc-private-ap-northeast-1a",
              "env": "production"
            },
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:subnet/subnet-02ce6f8929ab50225",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ce6f8929ab50225",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "167907275771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fungry-production-vpc-private-ap-northeast-1c",
              "env": "production"
            },
            "tags_all": {
              "Name": "fungry-production-vpc-private-ap-northeast-1c",
              "env": "production"
            },
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:subnet/subnet-0f3f45503eebd360f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3f45503eebd360f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "167907275771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fungry-production-vpc-public-ap-northeast-1a",
              "env": "production"
            },
            "tags_all": {
              "Name": "fungry-production-vpc-public-ap-northeast-1a",
              "env": "production"
            },
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:subnet/subnet-093a703a3e35a9b9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093a703a3e35a9b9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "167907275771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fungry-production-vpc-public-ap-northeast-1c",
              "env": "production"
            },
            "tags_all": {
              "Name": "fungry-production-vpc-public-ap-northeast-1c",
              "env": "production"
            },
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:vpc/vpc-01ffdd4a4b27702e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078d389e2ad10501f",
            "default_route_table_id": "rtb-0639af8893a5eeef7",
            "default_security_group_id": "sg-032731cbb9f42e31e",
            "dhcp_options_id": "dopt-d787a2b0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01ffdd4a4b27702e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0639af8893a5eeef7",
            "owner_id": "167907275771",
            "tags": {
              "Name": "fungry-production",
              "env": "production"
            },
            "tags_all": {
              "Name": "fungry-production",
              "env": "production"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:167907275771:vpc-endpoint/vpce-051b6c75712d92bfe",
            "cidr_blocks": [
              "52.219.195.0/24",
              "3.5.152.0/21",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.0.0/20",
              "52.219.162.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.68.0/22",
              "52.219.172.0/22"
            ],
            "id": "vpce-051b6c75712d92bfe",
            "owner_id": "167907275771",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "env": "production"
            },
            "tags_all": {
              "env": "production"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01ffdd4a4b27702e4"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_vpc_endpoint_service.s3"
          ]
        }
      ]
    }
  ]
}